# 4WIS-Robot-Simulation-Environment

./: Readme.md
4WIS_Robot/: CMakeLists.txt
4WIS_Robot/config/: four_wheel_steering_controller.yaml  multi_mode_4ws_controller.yaml  robot.rviz
4WIS_Robot/launch/: run_new.launch  run_old.launch
4WIS_Robot/scripts/: collision_pub.py  joy_controller.py  world_tf.py
4WIS_Robot/urdf/: car_new.urdf.xacro
4WIS_Robot/urdf/sensors/: camera_mount.xacro
4WIS_multimodal_controller/: CMakeLists.txt  multi_mode_4ws_controller_plugin.xml  package.xml
4WIS_multimodal_controller/include/: multi_mode_4ws_controller.h
4WIS_multimodal_controller/src/: multi_mode_4ws_controller.cpp
BARN_Env/: CMakeLists.txt
BARN_Env/launch/: run.launch
BARN_Env/scripts/: joy_controller.py
four_wheel_steering_controller/: CMakeLists.txt
four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steering_controller.h  odometry.h  speed_limiter.h
four_wheel_steering_controller/src/: four_wheel_steering_controller.cpp  odometry.cpp  speed_limiter.cpp
