<?xml version="1.0"?>
<package format="2">
  <name>multi_mode_4ws_controller</name>
  <version>1.0.0</version>
  <description>
    A multi-mode four wheel steering controller supporting Ackermann, 
    lateral translation, lateral Ackermann, and spin-in-place motion modes.
  </description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  
  <export>
    <controller_interface plugin="${prefix}/multi_mode_4ws_controller_plugin.xml"/>
  </export>
</package>